partsunlimited/ingress-controller.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress-parts
  annotations:
    kubernetes.io/ingress.class: nginx
    #cert-manager.io/cluster-issuer: letsencrypt
  namespace: ingress-nginx  
spec:
  ingressClassName: nginx
  tls: 
    - hosts: 
        -  20.85.138.153
      secretName: parts-web-secret
  rules:
  - host: partsunlimited.cloudns.biz
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: parts-web
              port:
                number: 80
